Performance improvements related to Unit event & listener handling mostly.